# Stained-Glass-Odyssey-Endless

./: .gitignore  ABOUTGAME.md  AGENTS.md  BUILD.md  CONTRIBUTING.md  DEVELOPMENT.md  Dockerfile.python  ENDLESS-SLEEP.md  IMPLEMENTATION_SUMMARY.md  README.md  TESTING_REPORT.md  build.sh  compose.stress-test.yaml  compose.yaml  demo_results.py  demo_room_10_pressure_1.py  endless-sleep.sh  luna_items_prompts.txt  ruff.toml  run-tests.sh  test-endless-sleep.sh
backend/: AGENTS.md  README.md  app.py  async_db_utils.py  battle_logging.py  battle_recording.py  config.toml  config.toml.example  debug_player_editor.py  docker-entrypoint.sh  error_context.py  game.py  logging_config.py  options.py  pyproject.toml  pytest.ini  shutdown_utils.py  test_battle_recording.py  test_config.py  track.db-journal
backend/.codex/implementation/: battle-action-events.md  battle-endpoint-payload.md  battle-logging.md  battle-setup.md  battle-snapshots.md  card-relic-about-field-migration.md  damage-healing.md  error-handling.md  floor-boss-state.md  foe-scaling.md  gacha-endpoint.md  logging.md  loot-tables.md  party-picker-endpoint.md  player-roster-metadata.md  player-upgrade-endpoint.md  post-fight-loot-screen.md  reward-progression.md  run-configuration-metadata.md  run-modules.md  save-manager-security.md  save-manager.md  settings-menu.md  turn-loop.md  user-level-system.md  vitality-effects.md
backend/autofighter/: action_queue.py  buffs.py  cards.py  debuffs.py  effects.py  gacha.py  mapgen.py  party.py  passives.py  relics.py  reward_preview.py  save_manager.py  stat_effect.py  stats.py  summons.py
backend/autofighter/rooms/: __init__.py  battle.py  battle_logging_queue.py  battle_setup.py  boss.py  chat.py  enrage_system.py  foe_factory.py  reward_calculator.py  shop.py  utils.py
backend/autofighter/summons/: base.py  manager.py
backend/battle_logging/: __init__.py  handlers.py  summary.py  writers.py
backend/data/: errors.json
backend/llms/: __init__.py  agent_loader.py  loader.py  loader.py.old.bak  safety.py  torch_checker.py
backend/models/: errors.py
backend/mods/: example_mod.py
backend/plugins/: __init__.py  damage_effects.py  event_bus.py  plugin_loader.py
backend/plugins/actions/: __init__.py  _base.py  context.py  registry.py  result.py  utils.py
backend/plugins/cards/: __init__.py  _base.py  a_micro_blade.py  adamantine_band.py  arc_lightning.py  arcane_repeater.py  balanced_diet.py  battle_meditation.py  bulwark_totem.py  calm_beads.py  coated_armor.py  critical_focus.py  critical_overdrive.py  critical_transfer.py  dynamo_wristbands.py  eclipse_theater_sigil.py  elemental_spark.py  enduring_charm.py  enduring_will.py  energizing_tea.py  equilibrium_prism.py  expert_manual.py  farsight_scope.py  flux_convergence.py  flux_paradox_engine.py  fortified_plating.py  guardian_choir_circuit.py  guardian_shard.py  guardians_beacon.py  guiding_compass.py  honed_point.py  inspiring_banner.py  iron_guard.py  iron_resolve.py  iron_resurgence.py  keen_goggles.py  lightweight_boots.py  lucky_coin.py  mindful_tassel.py  mystic_aegis.py  (+23 more)
backend/plugins/characters/: __init__.py  _base.py  ally.py  becca.py  bubbles.py  carly.py  casno.py  foe_base.py  graygray.py  hilander.py  ixia.py  jennifer_feltmann.py  kboshi.py  lady_darkness.py  lady_echo.py  lady_fire_and_ice.py  lady_light.py  lady_lightning.py  lady_of_fire.py  lady_storm.py  lady_wind.py  luna.py  mezzy.py  mimic.py  persona_ice.py  persona_light_and_dark.py  player.py  ryne.py  slime.py
backend/plugins/damage_types/: _base.py  dark.py  fire.py  generic.py  ice.py  light.py  lightning.py  wind.py
backend/plugins/dots/: abyssal_corruption.py  abyssal_weakness.py  celestial_atrophy.py  charged_decay.py
backend/plugins/effects/: __init__.py  _base.py  aftertaste.py  critical_boost.py
backend/plugins/events/: chest.py  fountain.py
backend/plugins/foes/: __init__.py  _base.py  slime.py
backend/plugins/hots/: radiant_regeneration.py
backend/plugins/passives/: advanced_combat_synergy.py  (+22 more)
backend/routes/: assets.py  catalog.py  config.py  gacha.py  guidebook.py  logs.py  performance.py  players.py  players.py.backup  rewards.py  tracking.py  ui.py  ui.py.backup
backend/runs/: __init__.py  encryption.py  lifecycle.py  party_manager.py
backend/scripts/: validate_config.py
backend/services/: asset_service.py  error_storage.py  login_reward_service.py  reward_service.py  room_service.py  run_configuration.py  run_service.py  user_level_service.py
backend/tests/: STRESS_TEST_README.md  conftest.py  test_100_fallback_effects_stress.py  test_800_dots_performance.py  test_accelerate_dependency.py  test_accelerate_fix_verification.py  test_action_basic_attack.py  test_action_context.py  test_action_discovery.py  test_action_points_no_double_charge.py  test_action_queue.py  test_action_registry.py  test_action_turn_loop_integration.py  test_active_effects_serialization.py  test_advanced_passive_behaviors.py  test_aftertaste.py  test_agent_loader.py  test_aggro_property.py  test_all_passive_variants_smoke_test.py  test_animation_timers.py  test_app.py  test_app_without_llm_deps.py  test_apply_damage_overflow_regression.py  test_arc_lightning.py  test_async_bus_stress_with_backend_ping.py  test_async_dot_optimizations.py  test_async_improvements.py  test_audit_validation.py  test_base_runtime_stats.py  test_battle_defeat.py  test_battle_end_on_all_foes_dead.py  test_battle_engine_async.py  test_battle_error_snapshot.py  test_battle_logging.py  test_battle_logging_single_start.py  test_battle_loot_items.py  test_battle_progress_helpers.py  test_battle_rewards.py  test_battle_room_awaiting_next.py  test_battle_room_reward_restart.py  (+222 more)
backend/tracking/: __init__.py  db.py  manager.py  service.py
(+1534 files in other folders)
