[project]
name = "autofighter"
version = "0+46b3b6ae6dff630fbeea9172522e407b8c38867d2830c4c66e3da7761f88fa0e"
description = "Quart backend for Midori AI AutoFighter"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pillow>=11.3.0",
    "rich>=13.0.0",
    "sqlcipher3-binary>=0.5.4; sys_platform != 'win32'",
    "quart>=0.19.6",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "cryptography>=41.0.0",
]
[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["autofighter", "plugins"]

[dependency-groups]
dev = [
    "pyinstaller>=6.15.0",
    "black>=23.0.0",
    "mypy>=1.5.0",
    "types-pillow",
]

[project.optional-dependencies]
windows-encryption = [
    "pysqlcipher3>=1.0.0; sys_platform == 'win32'",
]

llm-cpu = [
    "torch",
    "torchaudio",
    "torchvision",
    "chatterbox-tts",
    "openai",
    "langgraph",
    "langchain-core",
    "langchain-openai",
    "langchain-ollama",
    "langchain-localai",
    "langchain-community",
    "langchain-chroma",
    "langchain-huggingface",
    "langchain-text-splitters",
    "pillow",
    "transformers",
    "sentence-transformers",
    "accelerate",
]

llm-cuda = [
    "torch",
    "torchaudio",
    "torchvision",
    "chatterbox-tts",
    "openai",
    "langgraph",
    "langchain-core",
    "langchain-openai",
    "langchain-ollama",
    "langchain-localai",
    "langchain-community",
    "langchain-chroma",
    "langchain-huggingface",
    "langchain-text-splitters",
    "pillow",
    "transformers",
    "sentence-transformers",
    "accelerate",
]

llm-amd = [
    "torch",
    "torchaudio",
    "torchvision",
    "chatterbox-tts",
    "openai",
    "langgraph",
    "langchain-core",
    "langchain-openai",
    "langchain-ollama",
    "langchain-localai",
    "langchain-community",
    "langchain-chroma",
    "langchain-huggingface",
    "langchain-text-splitters",
    "pillow",
    "transformers",
    "sentence-transformers",
    "accelerate",
]

[tool.black]
line-length = 88
target-version = ['py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # Exclude legacy folder
  legacy/
  # Exclude build artifacts
  | build/
  | dist/
  | \.eggs/
  | \.venv/
)/
'''

[tool.mypy]
python_version = "3.11"
warn_return_any = false  # Start more lenient
warn_unused_configs = true
disallow_untyped_defs = false  # Start lenient
disallow_incomplete_defs = false  # More lenient
check_untyped_defs = true
disallow_untyped_decorators = false  # More lenient
no_implicit_optional = true
warn_redundant_casts = false  # More lenient
warn_unused_ignores = false  # More lenient 
warn_no_return = true
warn_unreachable = true
strict_equality = true

# Focus on critical security modules only initially
[[tool.mypy.overrides]]
module = [
    "app",
    "routes.*",
]
warn_return_any = true
disallow_untyped_defs = true

# Ignore missing imports for optional dependencies
[[tool.mypy.overrides]]
module = [
    "torch.*",
    "langchain.*", 
    "chatterbox_tts.*",
    "transformers.*",
    "accelerate.*",
    "psutil.*",
    "huggingface_hub.*",
    "sqlcipher3.*",
]
ignore_missing_imports = true
