[project]
name = "autofighter"
version = "0+46b3b6ae6dff630fbeea9172522e407b8c38867d2830c4c66e3da7761f88fa0e"
description = "Quart backend for Midori AI AutoFighter"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.3.4",
    "pydantic>=2.0.0",
    "pillow>=11.3.0",
    "rich>=13.0.0",
    "quart>=0.19.6",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "cryptography>=41.0.0",
    "sqlcipher3-binary>=0.5.4; sys_platform != 'win32'",
]
[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.uv]
compile-bytecode = true

[tool.uv.sources]
midori-ai-agents-all = { git = "https://github.com/Midori-AI-OSS/agents-packages.git", subdirectory = "midori-ai-agents-all" }
midori-ai-logger = { git = "https://github.com/Midori-AI-OSS/agents-packages.git", subdirectory = "logger" }

[tool.setuptools.packages.find]
where = ["."]
include = ["autofighter", "plugins", "llms"]

[tool.setuptools]
py-modules = ["options", "app", "async_db_utils", "error_context", "logging_config", "tts"]

[dependency-groups]
dev = [
    "pyinstaller>=6.15.0",
]

[project.optional-dependencies]
windows-encryption = [
    "pysqlcipher3>=1.0.0; sys_platform == 'win32'",
]

llm-cpu = [
    # Core LLM framework and logger
    "midori-ai-agents-all",
    "midori-ai-logger",
    
    # Still needed for local model support
    "torch",
    "torchaudio",
    "torchvision",
    "transformers",
    "sentence-transformers",
    "accelerate",
    
    # TTS support (commented out due to dependency conflicts - to be resolved)
    # "chatterbox-tts",
    "pillow",
]

llm-cuda = [
    # Core LLM framework and logger
    "midori-ai-agents-all",
    "midori-ai-logger",
    
    # Still needed for local model support with CUDA
    "torch",
    "torchaudio",
    "torchvision",
    "transformers",
    "sentence-transformers",
    "accelerate",
    
    # TTS support (commented out due to dependency conflicts - to be resolved)
    # "chatterbox-tts",
    "pillow",
]

llm-amd = [
    # Core LLM framework and logger
    "midori-ai-agents-all",
    "midori-ai-logger",
    
    # Still needed for local model support with AMD
    "torch",
    "torchaudio",
    "torchvision",
    "transformers",
    "sentence-transformers",
    "accelerate",
    
    # TTS support (commented out due to dependency conflicts - to be resolved)
    # "chatterbox-tts",
    "pillow",
]
